Fix minimal layout problems as described by course mentor

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,12 +41,17 @@ a:hover {
   left: 0;
   z-index: 10;
   min-width: 100%;
-  max-height: 60px;
-  padding: 13px;
+  max-height: 45px;
+  padding: 8px;
   color: #fff;
   background-color: rgba(255, 204, 92, .74);
   text-align: center;
 }
+
+/** Products Index */
+.card { width: 18rem; }
+
+/** Products Show */
 
 /** Footer */
 .footer {
@@ -59,3 +64,18 @@ a:hover {
 
 /** Typography */
 h2 { text-transform: uppercase; }
+
+/** Queries */
+@media (max-width: 576px) {
+  /** Products Index */
+  .card {
+    width: 21.5rem;
+    margin-bottom: 18px;
+  }
+  /** Products Show */
+  .products__details-info,
+  .orders__details-info {
+    margin-top: 18px;
+    font-size: 1.5rem;
+  }
+}
